<resources>
    <string name="app_name">Calculator</string>
    <string name="calcWork">Enter values</string>
    <string name="calcResults"></string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="buttonC">C</string>
    <string name="button0">0</string>
    <string name="buttonEqual">=</string>
    <string name="buttonDivide">/</string>
    <string name="buttonTimes">*</string>
    <string name="buttonSub">-</string>
    <string name="buttonAdd">+</string>

</resources>