<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--    Button 1-->
    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="7dp"
        android:onClick="oneOnClick"
        android:text="@string/button1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonC"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <!--    Button 2-->
    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="7dp"
        android:onClick="twoOnClick"
        android:text="@string/button2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <!--    Button 3-->
    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="7dp"
        android:onClick="threeOnClick"
        android:text="@string/button3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintEnd_toStartOf="@+id/buttonSub"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <!--    Button 4-->
    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:onClick="fourOnClick"
        android:text="@string/button4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <!--    Button 5-->
    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:onClick="fiveOnClick"
        android:text="@string/button5"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <!--    Button 6-->
    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="8dp"
        android:onClick="sixOnClick"
        android:text="@string/button6"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/buttonTimes"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <!--    Button 7-->
    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="7dp"
        android:onClick="sevenOnClick"
        android:text="@string/button7"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Button 8-->
    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="7dp"
        android:onClick="eightOnClick"
        android:text="@string/button8"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Button 9-->
    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="7dp"
        android:onClick="nineOnClick"
        android:text="@string/button9"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Button 0-->
    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="79dp"
        android:onClick="zeroOnClick"
        android:text="@string/button0"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEqual"
        app:layout_constraintStart_toEndOf="@+id/buttonC"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <!--    Button Equal-->
    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="79dp"
        android:onClick="equalOnClick"
        android:text="@string/buttonEqual"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <!--    Button Clear-->
    <Button
        android:id="@+id/buttonC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="79dp"
        android:onClick="clearOnClick"
        android:text="@string/buttonC"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <!--    Button Divide-->
    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="7dp"
        android:onClick="divideOnClick"
        android:text="@string/buttonDivide"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/buttonTimes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Button Multiply-->
    <Button
        android:id="@+id/buttonTimes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="8dp"
        android:onClick="timesOnClick"
        android:text="@string/buttonTimes"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/buttonSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <!--    Button Add-->
    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="79dp"
        android:onClick="addOnClick"
        android:text="@string/buttonAdd"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonEqual"
        app:layout_constraintTop_toBottomOf="@+id/buttonSub" />

    <!--    Button Subtract-->
    <Button
        android:id="@+id/buttonSub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="7dp"
        android:onClick="subOnClick"
        android:text="@string/buttonSub"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/buttonTimes" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="button8,buttonAdd,button4,button9,button5,button6,button1,button3,button2,buttonC,button0,buttonEqual,buttonDivide,button7,buttonTimes,buttonSub"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    Text Working Out-->
    <EditText
        android:id="@+id/calcWork"
        android:layout_width="374dp"
        android:layout_height="82dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="17dp"
        android:background="@color/black"
        android:ems="10"
        android:gravity="end|bottom"
        android:inputType="textPersonName"
        android:text="@string/calcWork"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>